# ecis

./: Cargo.toml  README.md  Rocket.toml
migrations/2021-09-04-195248_categories/: down.sql  up.sql
migrations/2021-09-04-195252_subcategories/: down.sql  up.sql
migrations/2021-09-04-195302_locations/: down.sql  up.sql
migrations/2021-09-04-195309_manufacturers/: down.sql  up.sql
migrations/2021-09-04-195310_components/: down.sql  up.sql
src/: category.rs  component.rs  location.rs  main.rs  manufacturer.rs  schema.rs
