[package]
name = "ecis"
version = "0.1.0"
edition = "2018"
author = "Chad Baxter <cbax@doslabelectronics.com>"

[dependencies]
barcoders = "1.0.2"
diesel = "1.4.7"
dotenv = "0.15.0"
reqwest = "0.11.4"
rocket = "0.5.0-rc.1"
rust-argon2 = "0.8"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
